# mdn-research

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  TODO.txt  TODO_.txt  build.sh  cmakeBuildCommands.txt  config.h.in  ellio_helpful.hpp  guiHeaders.h  input.json  inputRel.json  libraryHeaders.h  license.md  linuxBuild.sh  paths.txt  sampleInput.json  tabSignalsDesign.cpp  working.h  working1.h  working2.h  working3.h  working4.h
gui/: BinaryOperationDialog.cpp  BinaryOperationDialog.hpp  CMakeLists.txt  CellLineEdit.cpp  CellLineEdit.hpp  ClickableLabel.hpp  ClipBoardData.h  Clipboard.cpp  Clipboard.hpp  CommandWidget.cpp  CommandWidget.hpp  DigitGridWidget.h  DigitGridWidget.hpp  EnumDestinationMode.hpp  EnumOperation.hpp  EnumOperationPhase.hpp  GuiDriver.h  GuiDriver.hpp  GuiTools.hpp  HelpDialog.cpp  HelpDialog.hpp  HoverPeekTabBar.cpp  HoverPeekTabBar.hpp  HoverPeekTabWidget.cpp  HoverPeekTabWidget.hpp  LoggerConfigurator.cpp  LoggerConfigurator.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  MainWindow_.cpp  MainWindow_old.cpp  MarkerWidget.hpp  MdnMainWindow.cpp  MdnMainWindow.h  MdnMainWindow.hpp  MdnMainWindow.ui  MdnQtInterface.h  MdnQtInterface.hpp  NumberDisplayWidget.cpp  (+35 more)
gui/help/: about.md  guide.md  install.md  overview.md  projectProperties.md
gui/help/images/: MainWindow.xcf  ProjectPropertiesDialog.xcf  Slides.pptx  WelcomeDialog.xcf
misc/: mdn.desktop.in
sandbox/: CMakeLists.txt  onlineCode0.cpp  onlineCode00.cpp  onlineCode1.cpp  onlineCode2.cpp  onlineCode3.cpp  onlineCode4.cpp  onlineCode5.cpp  onlineCode6.cpp  output.txt  sandbox_main.cpp  test_library_main.cpp  test_toVecDigits_main.cpp
